Fix: Moves icon to clear search input a little more left to align properly with the input field.

--- a/structr-app/src/main/resources/structr/css/main.css
+++ b/structr-app/src/main/resources/structr/css/main.css
@@ -3498,7 +3498,7 @@ table.props td.__value {
 	display: none;
 	position: absolute;
 	top: .75rem;
-	right: .75rem;
+	right: 1.5rem;
 	cursor: pointer;
 }
 
